--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -13,12 +13,10 @@
 
 <body>
 <div> 
-    EVENT 
-    DETAILS 
+    EVENT DETAILS 
     SPEAKERS 
     SPONSORS 
-    PAST 
-    EVENTS 
+    PAST EVENTS 
     CONTACT
 </div>
 <div>
