--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="main"> 
+    <section class="main"> 
         <div class="main__logo">
         </div>
         <div class="main__menu">
@@ -46,14 +46,13 @@
                     Facere minima optio perferendis quibusdam quis reprehenderit, saepe! Debitis enim optio saepe voluptatibus.
                 </p>
         </div>     
-    </div>
-    <section>
-        <div class="advantages">
-            <h2 class="advantages__head"><a name="ПРЕИМУЩЕСТВА"></a>
+    </section>
+    <section class="advantages">
+            <h2 class="advantages__head">
                 Почему мы?
             </h2> 
         <section class="advantages__first">
-            <img alt="картинка вдруг не загрузилась" title="большие экраны" src="images/icon_1.png"> 
+            <img alt="picture didn't loaded" title="large screens" src="images/icon_1.png"> 
             <h3>
                 Большие экраны
             </h3>
@@ -63,7 +62,7 @@
             </p>
         </section>
         <section class="advantages__second">
-            <img alt="картинка вдруг не загрузилась" title="объемный звук" src="images/icon_2.png"> 
+            <img alt="picture didn't loaded" title="surround sound" src="images/icon_2.png"> 
             <h3>
                 Объемный звук
             </h3>
@@ -73,7 +72,7 @@
             </p>
         </section>
         <section class="advantages__third">
-            <img alt="картинка вдруг не загрузилась" title="удобные кресла" src="images/icon_3.png"> 
+            <img alt="picture didn't loaded" title="comfortable armchairs" src="images/icon_3.png"> 
             <h3>
                 Удобные кресла
             </h3>
@@ -81,7 +80,6 @@
                 Gather round fellow authors!Hear the stories of success from your favorite authors and learn how they we able
                 to tackle their problems and become successful.
             </p>
-        </div>
         </section>
     </section>
     <section>
@@ -93,14 +91,10 @@
                 <thead class="movie__table__thead">
                     <tr>
                         <th class="movie__table__thead-time">
-                            <a href="#">
                                 Начало сеанса 
-                            </a>
                         </th>
                         <th class="movie__table__thead-stuff">
-                            <a href="#">
                                 Название фильма
-                            </a>
                         </th>
                         <th class="movie__table__thead-genre">
                             <a href="#">
@@ -202,102 +196,84 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="movie__caution">
+                <p>
+                    Please keep in mind that the timings may differ according to the flow of the event. The even is actually day long and we do plan to finish it within our set time but it doesn’t have to be, if we all agree to hangour for some time more, what harm could it do? :)
+                </p>
+            </div>
         </div>
     </section>
     <section class="present">
         <div class="present__logo">
-            <img alt="сюрприз" title="подарок" src="images/Слой 4.png"> 
+            <img alt="picture didn't loaded" title="present" src="images/Слой 4.png"> 
         </div>
         <div class="present_each">
-        <h2>
-            Подарок каждому!
-        </h2>
-    </br>
-    </br>
-    </br>
-        <p>
-            Are you an Elite author in the Envato Marketplaces? If so we are proud of you! We want to give our thanks in achieving great 
-            success in the marketplace and we want to make known to the people of our country that you are amazing! Our Elite gifting 
-            program includes giving you special merchandize from our community and also promote your works in our community.
-        </p>
-    </br>
-        <p>
-            All you have to do is contact us by clicking the button here and then its just going to the event, saying something 
-            motivational and taking that swag while looking amazing infront of thousands of other community members.
-        </p>
-    </br>
-        <p>
-            *Be advised, we will only give you Elite thank you swag for each level of elite you cross.That means if you do not cross to the 
-            next elite level before the next event, you cannot claim your prizes.
-        </p>
-        <div class="button">
+            <h2>
+                Подарок каждому!
+            </h2>
             <p>
-            Получить подарок
+                Are you an Elite author in the Envato Marketplaces? If so we are proud of you! We want to give our thanks in achieving great 
+                success in the marketplace and we want to make known to the people of our country that you are amazing! Our Elite gifting 
+                program includes giving you special merchandize from our community and also promote your works in our community.
+            </p>
+            <p>
+                All you have to do is contact us by clicking the button here and then its just going to the event, saying something 
+                motivational and taking that swag while looking amazing infront of thousands of other community members.
+            </p>
+            <p>
+                *Be advised, we will only give you Elite thank you swag for each level of elite you cross.That means if you do not cross to the 
+                next elite level before the next event, you cannot claim your prizes.
+            </p>
+            <div class="present__button">
+                <p>
+                Получить подарок
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="films">
+        <h2>
+            Фильмы
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci alias, animi, commodi eius ipsum, 
+            laudantium neque nihil omnis perferendis sed sequi tempore! Ad ea esse ex inventore repudiandae, suscipit!
+        </p>
+    </section>
+    <section>
+        <div class="films__logotyp">
+                <ul>
+                        <li><a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="picture didn't loaded" title="человек-паук" src="images/spider.jpg"> </a></li>
+                        <li><a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="picture didn't loaded" title="собачья жизнь 2" src="images/dog.jpg"></a> </li>
+                        <li><a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="picture didn't loaded" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a></li>
+                        <li><a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="picture didn't loaded" title="человек-паук" src="images/spider.jpg"> </a></li>
+                        <li><a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="picture didn't loaded" title="собачья жизнь 2" src="images/dog.jpg"></a> </li>
+                        <li><a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="picture didn't loaded" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a></li>
+                        <li><a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="picture didn't loaded" title="человек-паук" src="images/spider.jpg"> </a></li>
+                        <li><a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="picture didn't loaded" title="собачья жизнь 2" src="images/dog.jpg"></a> </li>
+                        <li><a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="picture didn't loaded" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a></li>
+                </ul>
+
+        </div>
+        <div class="clear"></div>
+    </section>
+    <section>
+        <div class="relations">
+            <div class="relations_icons">
+                <img alt="picture didn't loaded" title="facebook" src="images/facebook  .png">
+                <img alt="picture didn't loaded" title="twitter"src="images/twitter.png">
+                <img alt="picture didn't loaded" title="linkedin" src="images/linkedin.png">
+                <img alt="picture didn't loaded" title="google plus"src="images/google plus .png">
+                <img alt="picture didn't loaded" title="twitter"src="images/twitter.png">
+            </div>
+            <p> 
+                    Hope we see you at the event!
             </p>
         </div>
-    </div>
-</section>
-<section class="films">
-    <h2>
-        Фильмы
-    </h2>
-</br>
-</br>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci alias, animi, commodi eius ipsum, 
-    </br>
-        laudantium neque nihil omnis 
-        perferendis sed sequi tempore! Ad ea esse ex inventore repudiandae, suscipit!
-    </p>
-</section >
-<div class="logotyp1">
-    <a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="картинка вдруг не загрузилась" title="человек-паук" src="images/spider.jpg"> </a>
-</div>
-<div class="logotyp2">
-    <a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="картинка вдруг не загрузилась" title="собачья жизнь 2" src="images/dog.jpg"></a> 
-</div>
-<div class="logotyp3">
-    <a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="картинка вдруг не загрузилась" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a> 
-</div>
-<div class="logotyp4">
-    <a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="картинка вдруг не загрузилась" title="человек-паук" src="images/spider.jpg"> </a>
-</div>
-<div class="logotyp5">
-    <a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="картинка вдруг не загрузилась" title="собачья жизнь 2" src="images/dog.jpg"></a>  
-</div>
-<div class="logotyp6">
-    <a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="картинка вдруг не загрузилась" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a> 
-</div>
-<div class="logotyp7">
-    <a href="https://www.kinopoisk.ru/film/838/" target="_blank"><img alt="картинка вдруг не загрузилась" title="человек-паук" src="images/spider.jpg"> </a>
-</div>
-<div class="logotyp8">
-    <a href="https://www.kinopoisk.ru/film/1122114/" target="_blank"><img alt="картинка вдруг не загрузилась" title="собачья жизнь 2" src="images/dog.jpg"></a>  
-</div>
-<div class="logotyp9">
-    <a href="https://www.kinopoisk.ru/film/693730/" target="_blank"><img alt="картинка вдруг не загрузилась" title="Люди в черном: Интернэшнл" src="images/mib.jpg"></a> 
-</div>
-</br>
-<div class="icons">
-</br>
-</br>
-    <div class="iconss">
-        <img alt="картинка вдруг не загрузилась" title="facebook" src="images/facebook  .png">
-        <img alt="картинка вдруг не загрузилась" title="twitter"src="images/twitter.png">
-        <img alt="картинка вдруг не загрузилась" title="linkedin" src="images/linkedin.png">
-        <img alt="картинка вдруг не загрузилась" title="google plus"src="images/google plus .png">
-        <img alt="картинка вдруг не загрузилась" title="twitter"src="images/twitter.png">
-    </div>
-</br>
-       <p> 
-            Hope we see you at the event!
-       </p>
-       <footer>
+        <footer>
             All Rights Reserved. Envato Bangladesh © 2015
-       </footer>
-    </br>
-</br>
-</div> 
+        </footer> 
+    </section>
 <form id="auth" action="order.php"style="width:450px">
         <div>
             <input type="text" name="client_name" required  value="" placeholder="Имя" >
