--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             </h2> 
             <div class="advantages__overflow">
                 <section class="advantages__enumeration">
-                    <div class="advantages__enumeration-image-wrap">
+                    <div class="advantages__enumeration-image-scren1">
                         <img alt="picture didn't loaded" title="large screens" src="images/icon_1.png"> 
                     </div>
                     <h3>
                         Большие экраны
                     </h3>
                     <p>
-                        Meet the Community you’ve always talked with, in real life! This meetup will be all about authors engaging 
-                        each other with interesting coversation and topics. We will have loads of fun.
+                        Meet the Community you’ve always talked with, in real life! This meetup will be all about authors engaging each other with interesting coversation
+ and topics. We will have loads of fun.
                     </p>
                 </section>
                 <section class="advantages__enumeration indent">
-                    <div class="advantages__enumeration-image-wrap">
+                    <div class="advantages__enumeration-image-scren2">
                         <img alt="picture didn't loaded" title="surround sound" src="images/icon_2.png"> 
                     </div>
                     <h3>
@@ -78,15 +78,17 @@
                         Learn a few tips and tricks from experienced authors from all over the country.
                     </p>
                 </section>
-                <section class="advantages__enumeration">
-                    <div class="advantages__enumeration-image-wrap">
+                <section class="advantages__enumeration-third">
+                    <div class="advantages__enumeration-image-scren3">
                         <img alt="picture didn't loaded" title="comfortable armchairs" src="images/icon_3.png"> 
                     </div>
                     <h3>
                         Удобные кресла
                     </h3>
                     <p>
-                        Gather round fellow authors!Hear the stories of success from your favorite authors and learn how they we able
+                        Gather round fellow authors!
+                    </br>
+                        Hear the stories of success from your favorite authors and learn how they we able
                         to tackle their problems and become successful.
                     </p>
                 </section>
@@ -232,8 +234,9 @@
                 motivational and taking that swag while looking amazing infront of thousands of other community members.
             </p>
             <p>
-                *Be advised, we will only give you Elite thank you swag for each level of elite you cross.That means if you do not cross to the 
-                next elite level before the next event, you cannot claim your prizes.
+                *Be advised, we will only give you Elite thank you swag for each level of elite you cross. 
+            </br> 
+                That means if you do not cross to the next elite level before the next event, you cannot claim your prizes.
             </p>
             <div class="present__button">
                 <p>
@@ -370,11 +373,13 @@
                     </g>
                 </svg>
             </div>
-            <p> 
-                    Hope we see you at the event!
-            </br>    
-                All Rights Reserved. Envato Bangladesh © 2015
-            </p>
+            <div class="relations__text">
+                <p> 
+                        Hope we see you at the event!
+                </br>    
+                    All Rights Reserved. Envato Bangladesh © 2015
+                </p>
+            </div>
         </div>
     </section>
 <form id="auth" action="order.php"style="width:450px">
