<3.3>-<2>-<comlete 'ACT-should'>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="advantages__overflow">
                 <section class="advantages__enumeration">
                     <div class="advantages__enumeration-image-scren1">
-                        <img alt="picture didn't loaded" title="large screens" src="images/icon_1.png"> 
+                        <img alt="picture didn't loaded" title="large screens" src="images/icon_1.png" class="scale"> 
                     </div>
                     <h3>
                         Большие экраны
@@ -68,7 +68,7 @@
                 </section>
                 <section class="advantages__enumeration indent">
                     <div class="advantages__enumeration-image-scren2">
-                        <img alt="picture didn't loaded" title="surround sound" src="images/icon_2.png"> 
+                        <img alt="picture didn't loaded" title="surround sound" src="images/icon_2.png" class="scale"> 
                     </div>
                     <h3>
                         Объемный звук
@@ -80,7 +80,47 @@
                 </section>
                 <section class="advantages__enumeration-third">
                     <div class="advantages__enumeration-image-scren3">
-                        <img alt="picture didn't loaded" title="comfortable armchairs" src="images/icon_3.png"> 
+                        <img alt="picture didn't loaded" title="comfortable armchairs" src="images/icon_3.png" class="scale"> 
+                    </div>
+                    <h3>
+                        Удобные кресла
+                    </h3>
+                    <p>
+                        Gather round fellow authors!
+                    </br>
+                        Hear the stories of success from your favorite authors and learn how they we able
+                        to tackle their problems and become successful.
+                    </p>
+                </section>
+            </div>
+            <div class="advantages__overflow">
+                <section class="advantages__enumeration">
+                    <div class="advantages__enumeration-image-scren1">
+                        <img alt="picture didn't loaded" title="large screens" src="images/icon_1.png" class="scale"> 
+                    </div>
+                    <h3>
+                        Большие экраны
+                    </h3>
+                    <p>
+                        Meet the Community you’ve always talked with, in real life! This meetup will be all about authors engaging each other with interesting coversation
+ and topics. We will have loads of fun.
+                    </p>
+                </section>
+                <section class="advantages__enumeration indent">
+                    <div class="advantages__enumeration-image-scren2">
+                        <img alt="picture didn't loaded" title="surround sound" src="images/icon_2.png" class="scale"> 
+                    </div>
+                    <h3>
+                        Объемный звук
+                    </h3>
+                    <p>
+                        In this meetup you will get to know the marketplaces better, because that’s why were all here for right?
+                        Learn a few tips and tricks from experienced authors from all over the country.
+                    </p>
+                </section>
+                <section class="advantages__enumeration-third">
+                    <div class="advantages__enumeration-image-scren3">
+                        <img alt="picture didn't loaded" title="comfortable armchairs" src="images/icon_3.png" class="scale"> 
                     </div>
                     <h3>
                         Удобные кресла
