<4.5>-<1>-<trouble with task 3>

--- a/index.html
+++ b/index.html
@@ -1669,6 +1669,7 @@
 
     <script src="js/film.js"></script>
     <script src="js/getPresent.js"></script>
+    <script src="js/home_work_4.5.js"></script>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
