<4.6>-<1>-<comlete all tasks>

--- a/home_work_4.6.html
+++ b/home_work_4.6.html
@@ -9,17 +9,45 @@
 </head>
 
 <body>
-    <p class="task_1">
+    <div class="task_1">
         <h2> Task 1</h2>
         <p>
-                <input id="raz" type="text">
-                <button onclick="r1()">Отправить</button>
+            <input id="raz" type="text">
+            <button onclick="r1()">Отправить</button>
         </p>
-        <div style="border: solid 1px black; width:200px" >
+        <div style="border: solid 1px black; width:200px">
             <p>Hallelujah!!!! finish!!!</p>
-                <p id="output"></p>
-        </div>    
-
+            <p id="output"></p>
+        </div>
+    </div>
+    <div class="task_2">
+        <h2> Task 2</h2>
+        <div>
+            <p>
+                <input id="first" type="text">
+                <input id="second" type="text">
+                <button onclick="r2()">Отправить</button>
+            </p>
+        </div>
+        <div style="border: solid 1px black; width:200px">
+            <p>Maximum</p>
+            <p id="max"></p>
+        </div>
+    </div>
+    <div class="task_4">
+        <h2> Task 4</h2>
+        <div>
+            <p>
+                <input id="left" type="text">
+                <input id="right" type="text">
+                <button onclick="r4()">Отправить</button>
+            </p>
+        </div>
+        <div style="border: solid 1px black; width:200px">
+            <p>Number</p>
+            <p id="number1"></p>
+        </div>
+    </div>
     <script src="js/home_work_4.6.js"></script>
 </body>
 
