--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@
                 prizes.
             </p>
             <div class="present__button">
-                <p>
-                    Получить подарок
-                </p>
+                <button id="getPresentModal" class="button1">Получить подарок</button>
             </div>
         </div>
     </section>
@@ -1612,64 +1610,72 @@
             </div>
         </div>
     </section>
-    <form id="auth" action="order.php" style="width:16rem">
-        <div>
-            <input id="name_guest" type="text" name="client_name" required name=" name_guest" value=""
-                placeholder="Имя">
-        </div>
-        <div>
-            <input type="email" name="email" required value="" placeholder="Email">
-        </div>
-        <div>
-            <select>
-                <option>Выбор 1</option>
-                <option>Выбор 2</option>
-                <option>Выбор 3</option>
-                <option>Выбор 4</option>
-                <option>Выбор 5</option>
-                <option>Выбор 6</option>
-                <option>Выбор 7</option>
-                <option>Выбор 8</option>
-                <option>Выбор 9</option>
-                <option>Выбор 10</option>
-            </select>
-        </div>
-        <div>
-            <label for="first">Выбор 1</label>
-            <input in="first" type="radio" value="1">
-            <label for="first">Выбор 2</label>
-            <input in="first" type="radio" value="1">
-        </div>
-        <div>
-            <textarea>
-                Тело тега
-            </textarea>
-        </div>
-        <div>
-            <input id="agree" type="checkbox" required>
-            <label in="agree"> Я согласен на обработку данных</label>
-        </div>
-        <div>
-            <input type="file" />
-        </div>
-        <div>
-            <label for="first">нечто 1</label>
-            <input in="first" type="radio" value="2" name="some" />
-        </div>
-        <div>
-            <label>нечто 1</label>
-            <input type="radio" value="3" name="some" />
-        </div>
+    
 
-    </form>
-    <div>
-        <input type="submit" value="Заказать" form="auth" />
-        <button id="sendPresentInfo" form="auth">Заказать</button>
+
+    <div id ="modalPresent">  
+            <div class="modal">
+                <button id="closeModalPresent">X</button>
+                <form action="">
+                    <div>
+                        <input id="name_guest" type="text" name="client_name" required name=" name_guest" value=""
+                            placeholder="Имя">
+                    </div>
+                    <!-- <div>
+                        <input type="email" name="email" required value="" placeholder="Email">
+                    </div>
+                    <div>
+                        <select>
+                            <option>Выбор 1</option>
+                            <option>Выбор 2</option>
+                            <option>Выбор 3</option>
+                            <option>Выбор 4</option>
+                            <option>Выбор 5</option>
+                            <option>Выбор 6</option>
+                            <option>Выбор 7</option>
+                            <option>Выбор 8</option>
+                            <option>Выбор 9</option>
+                            <option>Выбор 10</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="first">Выбор 1</label>
+                        <input in="first" type="radio" value="1">
+                        <label for="first">Выбор 2</label>
+                        <input in="first" type="radio" value="1">
+                    </div>
+                    <div>
+                        <textarea>
+                            Тело тега
+                        </textarea>
+                    </div>
+                    <div>
+                        <input id="agree" type="checkbox" required>
+                        <label in="agree"> Я согласен на обработку данных</label>
+                    </div>
+                    <div>
+                        <input type="file" />
+                    </div>
+                    <div>
+                        <label for="first">нечто 1</label>
+                        <input in="first" type="radio" value="2" name="some" />
+                    </div>
+                    <div>
+                        <label>нечто 1</label>
+                        <input type="radio" value="3" name="some" />
+                    </div>
+             -->
+                </form>
+                <div>
+                    <input type="submit" value="Заказать" form="auth" />
+                    <button id="sendPresentInfo" form="auth">Заказать</button>
+                </div>
+            </div>
     </div>
 
     <script src="js/film.js"></script>
     <script src="js/getPresent.js"></script>
-    <script src="js/home_work_4.5.js"></script>
+    <!-- <script src="js/home_work_4.5.js"></script> -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
