<5.2>-<1>-<add films from site, but have a problem with slider>

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 Выберите фильм
             </h2>
             <div class="table">
-                <table  class="movie__table">
-                   <thead class="movie__table__thead">
+                <table class="movie__table">
+                    <thead class="movie__table__thead">
                         <tr>
                             <th class="movie__table__thead-time">
                                 Начало сеанса
@@ -130,77 +130,21 @@
                             <th class="movie__table__thead-stuff">
                                 Название фильма
                             </th>
+
                             <th class="movie__table__thead-genre">
                                 <a href="#">
                                     Жанр
                                 </a>
                             </th>
+                            <th>
+                                Стоимость билета
+                            </th>
                             <th class="movie__table__thead-plus">
                             </th>
                         </tr>
                     </thead>
-                    <tbody id = "filmsHire" class="movie__table__tbody">
-                       <!--  <tr>
-                            <td class="movie__table__tbody-time" id="start_film_1">
-                            </td>
-                            <td class="movie__table__tbody-stuff" id="name_film_1">
-                            </td>
-                            <td class="movie__table__tbody-genre" id="ganar_film_1">
-                            </td>
-                            <td class="movie__table__tbody-plus">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    width="33px" height="33px">
-                                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
-                                        d="M16.505,32.994 C7.393,32.994 0.005,25.607 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.607 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.777 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z" />
-                                </svg>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="movie__table__tbody-time" id="start_film_2">
-                            </td>
-                            <td class="movie__table__tbody-stuff" id="name_film_2">
-                            </td>
-                            <td class="movie__table__tbody-genre" id="ganar_film_2">
-                            </td>
-                            <td class="movie__table__tbody-plus">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    width="33px" height="33px">
-                                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
-                                        d="M16.505,32.994 C7.393,32.994 0.005,25.607 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.607 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.777 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z" />
-                                </svg>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="movie__table__tbody-time" id="start_film_3">
-                            </td>
-                            <td class="movie__table__tbody-stuff" id="name_film_3">
-                            </td>
-                            <td class="movie__table__tbody-genre" id="ganar_film_3">
-                            </td>
-                            <td class="movie__table__tbody-plus">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    width="33px" height="33px">
-                                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
-                                        d="M16.505,32.994 C7.393,32.994 0.005,25.607 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.607 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.777 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z" />
-                                </svg>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="movie__table__tbody-time" id="start_film_4">
-                            </td>
-                            <td class="movie__table__tbody-stuff" id="name_film_4">
-                            </td>
-                            <td class="movie__table__tbody-genre" id="ganar_film_4">
-                            </td>
-                            <td class="movie__table__tbody-plus">
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    width="33px" height="33px">
-                                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
-                                        d="M16.505,32.994 C7.393,32.994 0.005,25.607 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.607 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.777 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z" />
-                                </svg>
-                            </td>
-                        </tr>-->
-                    </tbody> 
+                    <tbody id="filmsHire" class="movie__table__tbody">
+                    </tbody>
                 </table>
             </div>
             <div class="movie__caution">
@@ -256,10 +200,10 @@
             </p>
         </section>
         <section>
-            <div  id = "filmsNew" class="movie-grid ">
-                <div id= "grid" class="movie-grid_flex owl-carousel">
+            <div id="filmsNew" class="movie-grid ">
+                <div id="grid" class="movie-grid_flex owl-carousel">
 
-                </div> 
+                </div>
             </div>
         </section>
     </div>
@@ -411,18 +355,18 @@
             </div>
         </div>
     </section>
-    
 
 
-    <div id ="modalPresent">  
-            <div class="modal">
-                <button id="closeModalPresent">X</button>
-                <form action="">
-                    <div>
-                        <input id="name_guest" type="text" name="client_name" required name=" name_guest" value=""
-                            placeholder="Имя">
-                    </div>
-                    <!-- <div>
+
+    <div id="modalPresent">
+        <div class="modal">
+            <button id="closeModalPresent">X</button>
+            <form action="">
+                <div>
+                    <input id="name_guest" type="text" name="client_name" required name=" name_guest" value=""
+                        placeholder="Имя">
+                </div>
+                <!-- <div>
                         <input type="email" name="email" required value="" placeholder="Email">
                     </div>
                     <div>
@@ -466,16 +410,63 @@
                         <input type="radio" value="3" name="some" />
                     </div>
              -->
-                </form>
+            </form>
+            <div>
+                <input type="submit" value="Заказать" form="auth" />
+                <button id="sendPresentInfo" form="auth">Заказать</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="orderForm">
+        <div class="modal">
+            <button id="closeOrderForm">X</button>
+
+            <div class="modal_form">
                 <div>
-                    <input type="submit" value="Заказать" form="auth" />
-                    <button id="sendPresentInfo" form="auth">Заказать</button>
+                    <span>Назварние фильма:</span>
+                    <span id="orderFilmName"></span>
+                </div>
+                <div>
+                    <span>Начало сеанса:</span>
+                    <span id="orderFilmStart"></span>
+                </div>
+                <div>
+                    <span>Жанр:</span>
+                    <span id="orderFilmGanar"></span>
+                </div>
+                <div>
+                    <span>Стоимость билета:</span>
+                    <span id="orderFilmPrice"></span>
+
+                    <span>Количество билетов:</span>
+                    <input type="number" value="1" id="orderFilmCauntTicket" />
+                </div>
+                <div>
+                    <span>Общая стоимость билетов</span>
+                    <span id="orderFilmTotalPrice"></span>
+
+                </div>
+                <div>
+                    <span>Номер телефона:</span>
+                    <input type="tel" pattern="3[0-9] {3}-[0-9]" id="orderFilmPhone" />
+                </div>
+                <div>
+                    <span>Имя:</span>
+                    <input type="text" id="orderClientName" />
+                </div>
+                <div class="input-wrap">
+                    <button id="sendOrder" class="button1">Забранировать</button>
                 </div>
             </div>
+        </div>
     </div>
+
 
     <script src="js/film.js"></script>
     <script src="js/getPresent.js"></script>
+    <script src="js/slider.js"></script>
+    
     <!-- <script src="js/home_work_4.5.js"></script> -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
